add last parts
