# model/User.js
@@ -1,4 +1,6 @@
 const mongoose = require('mongoose');
+const jwt = require('jsonwebtoken');
+const config = require('config');
 
 const userSchema = new mongoose.Schema({
 	name: {
@@ -19,8 +21,15 @@ const userSchema = new mongoose.Schema({
 	password: {
 		type: String,
 		required: true,
+		select: false,
 	},
 });
+
+userSchema.methods.generateAuthToken = function () {
+	return jwt.sign({ _id: this._id, email: this.email }, config.get('jwt'), {
+		expiresIn: '10h',
+	});
+};
 
 const validatorSchema = {
 	type: 'object',
@@ -49,10 +58,28 @@ const validatorSchema = {
 	required: ['name', 'email', 'password', 'mobile'],
 };
 
+const loginValidator = {
+	type: 'object',
+	additionalProperties: false,
+	properties: {
+		email: {
+			format: 'email',
+			maxLength: 70,
+		},
+		password: {
+			type: 'string',
+			maxLength: 200,
+			minLength: 5,
+		},
+	},
+	required: ['email', 'password'],
+};
+
 //Export the model
 const User = mongoose.model('User', userSchema);
 
 module.exports = {
+	loginValidator,
 	validator: validatorSchema,
 	model: User,
 };
